# cb-sync

./: .gitignore  Cargo.toml  README.md  abst.md  shell.nix
contrib/systemd/: cb-sync-notify@.service  cb-sync.service  install.sh
crates/cb-cli/: Cargo.toml
crates/cb-cli/src/: main.rs
crates/cb-core/: Cargo.toml
crates/cb-core/src/: clipboard.rs  config.rs  crypto.rs  daemon.rs  error.rs  lib.rs  protocol.rs  sync.rs
