[workspace]
resolver = "2"
members = [
    "crates/cb-core",
    "crates/cb-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["imymemine"]

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

# Windows-specific dependencies
[workspace.dependencies.clipboard-win]
version = "5"
