[package]
name = "cb-cli"
description = "CLI application for cb-sync clipboard sharing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cb-sync"
path = "src/main.rs"

[dependencies]
cb-core = { path = "../cb-core" }
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
